# python-project-uv

./: .gitignore  README.md  UV_SETUP_AND_USAGE_GUIDE.md  github_tricks.md
ms-demo-project/: .env.sample  README.md  pyproject.toml
ms-demo-project/src/ms_demo_project/: config.py  logger.py  main.py
ms-demo-project/src/ms_demo_project/features/: feature_math.py  feature_string.py
ms-demo-project/src/ms_demo_project/shared/utils/math/: arithmetic.py
ms-demo-project/src/ms_demo_project/shared/utils/string/: formatting.py
ms-demo-project/tests/: test_feature_math.py  test_feature_string.py
